# rust-sa

./: .gitignore  README.md  flake.nix
.github/workflows/: ci.yml  submit.yml
bench/: coldstart.sh  fullbench.sh
bench/results/: 2026-07-04.json  2026-07-05-fullbench.json
frontend/: .gitignore  .oxfmtrc.json  .oxlintrc.json  Makefile  codegen.ts  knip.json  package.json  pnpm-lock.yaml  schema.graphql
frontend/src/: routeTree.gen.ts  styles.css
frontend/src/components/: comment-thread.tsx  diff-view.tsx  error-screen.tsx  file-tree-view.tsx  folder-picker.tsx  graph-ref-section.tsx  top-bar.tsx  url-bar.tsx
frontend/src/components/ui/: button.tsx  kbd.tsx  refresh-button.tsx  repo-combobox.tsx  resize-handle.tsx  segmented.tsx  sheet.tsx  tag.tsx  viewed-check.tsx
frontend/src/graphql/operations/: browse.graphql  comments.graphql  compare.graphql  folder-picker.graphql  graph.graphql  home.graphql  preferences.graphql
frontend/src/lib/: a11y-patches.ts  apollo.ts  comments.ts  diff-api.ts  diff-search.test.ts  diff-search.ts  fuzzy.ts  preference.ts  server-origin.ts  server-preference.ts  short-sha.ts  sse.ts  typed-query.ts
frontend/src/routes/: __root.tsx  browse.tsx  compare.$.tsx  design.tsx  diff.tsx  graph.tsx  health.tsx  index.tsx  preference.tsx
src-tauri/: Cargo.toml  Makefile  build.rs  tauri.conf.json
src-tauri/src/: main.rs  server.rs
