[package]
name = "rust-sa"
version = "0.1.0"
edition = "2021"
default-run = "rust-sa"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"

tokio = { version = "1", features = ["full"] }
axum = "0.8"
async-graphql = "7"
async-graphql-axum = "7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.6", features = ["cors"] }
