[package]
name = "conao3-sa"
version = "0.1.0"
edition = "2021"
default-run = "sa"
description = "Local git diff reviewer with a TanStack Start frontend and an axum/async-graphql backend."
license = "MIT"
repository = "https://github.com/conao3/rust-sa"
homepage = "https://github.com/conao3/rust-sa"
readme = "../README.md"
keywords = ["git", "diff", "review", "tauri"]
categories = ["development-tools", "command-line-utilities"]

[[bin]]
name = "sa"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"

tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
axum = "0.8"
async-graphql = "7"
async-graphql-axum = "7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
dirs = "5"
tower-http = { version = "0.6", features = ["cors", "compression-gzip"] }
gix = { version = "0.74", default-features = false, features = ["max-performance-safe"] }
notify = "8"
notify-debouncer-mini = "0.6"
ignore = "0.4"
futures = "0.3"
