[package]
name = "conao3-sa"
version = "0.1.6"
edition = "2021"
default-run = "sa"
description = "Local git diff reviewer with a TanStack Start frontend and an axum/async-graphql backend."
license = "MIT"
repository = "https://github.com/conao3/rust-sa"
homepage = "https://github.com/conao3/rust-sa"
readme = "../README.md"
keywords = ["git", "diff", "review", "tauri"]
categories = ["development-tools", "command-line-utilities"]
include = [
  "src/**/*",
  "build.rs",
  "Cargo.toml",
  "Cargo.lock",
  "tauri.conf.json",
  "icons/**/*",
  "gen/**/*",
  "capabilities/**/*",
  "dist/**/*",
  "../README.md",
]

[lib]
name = "conao3_sa"
path = "src/lib.rs"

[[bin]]
name = "sa"
path = "src/main.rs"

[features]
default = ["desktop"]
desktop = ["dep:tauri", "dep:tauri-plugin-shell", "dep:tauri-build"]

[build-dependencies]
tauri-build = { version = "2", features = [], optional = true }

[dependencies]
tauri = { version = "2", features = [], optional = true }
tauri-plugin-shell = { version = "2", optional = true }

tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
axum = "0.8"
async-graphql = "7"
async-graphql-axum = "7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1.1"
dirs = "6"
tower-http = { version = "0.7", features = ["cors", "compression-gzip"] }
gix = { version = "0.85", default-features = false, features = ["max-performance-safe", "sha1"] }
notify = "8"
ignore = "0.4"
futures = "0.3"
rust-embed = { version = "8", features = ["axum", "interpolate-folder-path"] }
mime_guess = "2"
